styles: img do background atualizada

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
             </div>
         </div>
 
-        <img src="images/bg-higienizacao.png" alt="Imagem de limpeza" class="img-and-info__img">
+        <img src="images/higienizacao.svg" alt="Imagem de limpeza" class="img-and-info__img">
     </section>
 
     <section class="services">
         <div class="container services-title-and-info">
             <div>
                 <h2 class="services-title-and-info__title">Transformamos Espaços, Elevamos a Saúde e Bem-Estar!</h2>
+                <p class="services-title-and-info__paragrafo">Conheça nossos serviços de higienização e limpeza profunda, e garanta um ambiente mais saudável e seguro para você e sua família.</p>
+
                 <img src="images/bg-higienizacao-02.png" alt="" class="services-title-and-info__img">
             </div>
 
