--- a/index.html
+++ b/index.html
@@ -91,5 +91,39 @@
             </div>
         </div>
     </section>
+
+    <section class="container">
+        <div class="why-choose">
+            <h2 class="why-choose__title">Porque nos escolher</h2>
+            <p class="why-choose__paragrafo">Conheça os diferenciais que fazem da Higienização a melhor escolha para a limpeza e higienização do seu ambiente.</p>
+
+            <div class="why-choose__container">
+                <div class="why-choose__container__info">
+                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
+                    <h3>Profissionais Qualificados</h3>
+                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                </div>
+
+                <div class="why-choose__container__info">
+                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
+                    <h3>Profissionais Qualificados</h3>
+                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                </div>
+
+                <div class="why-choose__container__info">
+                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
+                    <h3>Profissionais Qualificados</h3>
+                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                </div>
+
+                <div class="why-choose__container__info">
+                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
+                    <h3>Profissionais Qualificados</h3>
+                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
