style: atualizado container "why choose"(falta finalizar)

--- a/index.html
+++ b/index.html
@@ -94,35 +94,63 @@
 
     <section class="container">
         <div class="why-choose">
+            <div class="triangle"></div>
+            <div class="triangle trinagle-gray"></div>
+            <div class="virus"><img src="images/virus.png" alt=""></div>
+
             <h2 class="why-choose__title">Porque nos escolher</h2>
             <p class="why-choose__paragrafo">Conheça os diferenciais que fazem da Higienização a melhor escolha para a limpeza e higienização do seu ambiente.</p>
 
             <div class="why-choose__container">
                 <div class="why-choose__container__info">
-                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
-                    <h3>Profissionais Qualificados</h3>
-                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                    <div class="why-choose__container__info-icon">
+                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
+                    </div>
+
+                    <div class="why-choose__container__info__text">
+                        <h3>Profissionalismo e Dedicação</h3>
+                        <p>Nossa equipe é treinada para oferecer o melhor serviço, com atenção aos mínimos detalhes.</p>
+                    </div>
                 </div>
 
                 <div class="why-choose__container__info">
-                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
-                    <h3>Profissionais Qualificados</h3>
-                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                    <div class="why-choose__container__info-icon"> 
+                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
+                    </div>
+
+                    <div class="why-choose__container__info__text">
+                        <h3>Atendimento Personalizado</h3>
+                        <p>Entendemos que cada cliente é único, e adaptamos nossos serviços para atender às suas necessidades específicas.</p>
+                    </div>
                 </div>
 
                 <div class="why-choose__container__info">
-                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
-                    <h3>Profissionais Qualificados</h3>
-                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                    <div class="why-choose__container__info-icon"> 
+                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
+                    </div>
+                    <h3>Compromisso com a sua Saúde e Bem-Estar</h3>
+                    <p>Nossos serviços não apenas limpam, mas protegem sua saúde e a de quem você ama.</p>
                 </div>
 
                 <div class="why-choose__container__info">
-                    <div class="why-choose__container__info-icon"> <i class="fas fa-check fa-lg"></i> </div>
-                    <h3>Profissionais Qualificados</h3>
-                    <p>Produtos de qualidade e tecnologia de ponta</p>
+                    <div class="why-choose__container__info-icon"> 
+                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
+                    </div>
+                    <h3>Tecnologia de Ponta</h3>
+                    <p>Utilizamos equipamentos e produtos de última geração para resultados impecáveis.</p>
                 </div>
             </div>
 
+            <div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 200px;">
+                <img src="images/profissionalismo.svg" alt="" style="width: 550px; height: auto;">
+
+                <div>
+                    <h2 class="why-choose__title">O que as pessoas dizem?</h2>
+                    <div>
+                        card aqui
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </body>
