style: card adicionado

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="why-choose">
             <div class="triangle"></div>
             <div class="triangle trinagle-gray"></div>
-            <div class="virus"><img src="images/virus.png" alt=""></div>
+            <div class="virus"><img src="images/virus.svg" alt=""></div>
 
             <h2 class="why-choose__title">Porque nos escolher</h2>
             <p class="why-choose__paragrafo">Conheça os diferenciais que fazem da Higienização a melhor escolha para a limpeza e higienização do seu ambiente.</p>
@@ -141,13 +141,39 @@
                 </div>
             </div>
 
-            <div style="display: flex; justify-content: space-between; gap: 10px; margin-top: 200px;">
-                <img src="images/profissionalismo.svg" alt="" style="width: 550px; height: auto;">
+            <div class="container-card-and-title">
+                <div class="triangle triangle-orange"></div>
+                <div class="triangle triangle-orange__shadow"></div>
 
-                <div>
-                    <h2 class="why-choose__title">O que as pessoas dizem?</h2>
-                    <div>
-                        card aqui
+                <img src="images/profissionalismo.svg" alt="" class="container-card-and-title__img">
+
+                <div class="card-and-title">
+                    <h2 class="card-and-title__title">O que as pessoas dizem?</h2>
+                    
+                    <div class="card-and-title__card">
+                        <h2>Serviço qualidantions</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique sint quis nisi sapiente quasi id fuga repudiandae, vel odit delectus deserunt excepturi, blanditiis accusamus distinctio veritatis aliquid optio sequi hic.</p>
+                    
+                        <div class="stars-and-person">
+                            <div class="stars-and-person__stars">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                            </div>
+
+                            <div class="stars-and-person__person">
+                                <div class="stars-and-person__person-info">
+                                    <p>João da Silva</p>
+                                    <p>Chefe executivo</p>
+                                </div>
+
+                                <div class="stars-and-person__person-user">
+                                    <img src="images/avatar.svg" alt="Avatar de João da Silva">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
