style: Update section height and add padding to improve layout

--- a/index.html
+++ b/index.html
@@ -189,11 +189,12 @@
 
 
     <section style="
-        height: 100vh; 
+        height: auto; 
         background-color: #24273A; 
         position: relative; 
         width: 100%; 
         display: flex; 
+        padding: 50px 0; 
         ">
 
         <div style="
@@ -214,7 +215,7 @@
                 z-index: 10;
                 color: white;
                 padding: 30px;
-                border-radius: 14px 14px 0 0;
+                border-radius: 14px;
                 background-color: transparent;
                 backdrop-filter: blur(55px);
                 border: 3px solid rgba(255, 255, 255, 0.1);
@@ -224,7 +225,6 @@
                 height: 80%;
                 position: relative;
                 border-bottom: none;
-                
             }
 
             .card-teste::after{
