feat: footer primeira parte

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="frequently-questions__container__question">
                     <div class="frequently-questions__container__question__title-and-icon" onclick="openDescription(this)">
                         <h3>Como é feita a higienização de ambientes?</h3>
-                        <button><i class="fa-solid fa-arrow-right fa-rotate-90"></i></button>
+                        <button><i class="fa-solid fa-arrow-right fa-rotate-180"></i></button>
                     </div>
                     <p>Nossa equipe utiliza produtos de qualidade e tecnologia de ponta para garantir a remoção de bactérias, vírus e outros contaminantes, promovendo um ambiente mais saudável.</p>
                 </div>
@@ -237,7 +237,7 @@
                 <div class="frequently-questions__container__question">
                     <div class="frequently-questions__container__question__title-and-icon" onclick="openDescription(this)">
                         <h3>Quais os benefícios da limpeza profunda</h3>
-                        <button><i class="fa-solid fa-arrow-right fa-rotate-90"></i></button>
+                        <button><i class="fa-solid fa-arrow-right fa-rotate-180"></i></button>
                     </div>
                     <p>A limpeza profunda garante a remoção de sujeiras e impurezas que não são visíveis a olho nu, promovendo um ambiente mais saudável e seguro para você e sua família.</p>
                 </div>
@@ -245,7 +245,7 @@
                 <div class="frequently-questions__container__question">
                     <div class="frequently-questions__container__question__title-and-icon" onclick="openDescription(this)">
                         <h3>Como é feita a desinfecção residencial e comercial?</h3>
-                        <button><i class="fa-solid fa-arrow-right fa-rotate-90"></i></button>
+                        <button><i class="fa-solid fa-arrow-right fa-rotate-180"></i></button>
                     </div>
                     <p>Nossos serviços de desinfecção são realizados com produtos de alta eficácia, garantindo a eliminação de patógenos e a proteção da saúde de quem você ama.</p>
                 </div>
@@ -253,14 +253,55 @@
                 <div class="frequently-questions__container__question">
                     <div class="frequently-questions__container__question__title-and-icon" onclick="openDescription(this)">
                         <h3>Quais os riscos de ácaros e fungos?</h3>
-                        <button><i class="fa-solid fa-arrow-right fa-rotate-90"></i></button>
+                        <button><i class="fa-solid fa-arrow-right fa-rotate-180"></i></button>
                     </div>
                     <p>Ácaros e fungos podem causar alergias e problemas respiratórios, por isso é importante realizar a higienização e desinfecção do ambiente regularmente.</p>
                 </div>
             </div>
         </div>
     </section>
-    
+
+    <footer>
+        <div class="container">
+            <div>
+                <h2>Links Úteis</h2>
+                <ul>
+                    <li>Home</li>
+                    <li>Produtos</li>
+                    <li>Contato</li>
+                    <li>Quem somos</li>
+                    <li>Localização</li>
+                </ul>
+            </div>
+
+            <div>
+                <h2>Suporte</h2>
+                <p>(79) 98122-4450</p>
+                <p>Rua 7 de Setembro, 123</p>
+                <p>Aracaju - SE</p>
+                <p>suporte@contanto.com</p>
+            </div>
+
+            <div>
+                <h2>Newsletter</h2>
+                <p>Assine nossa newsletter e receba novidades e promoções exclusivas.</p>
+                <input type="email" placeholder="Digite seu e-mail">
+                <button>Assinar</button>
+            </div>
+
+            <div>
+                <h2>Redes Sociais</h2>
+                <div>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
+                </div>
+            </div>
+        </div>
+        
+        <p>Copyrigth &copy; Anthony Aragão 2024</p>
+    </footer>
 
     <script>
         function openDescription(container) {
