refactor:  styles section img-and-info e services adicionado em arquivos separados

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 
 <body>
     <header>
-        <div class="container-header">
-            <h1 class="container-header__logo">Higienização logo</h1>
+        <div class="header-container">
+            <h1 class="header-logo">Higienização</h1>
 
             <nav>
-                <ul class="container-header__links">
-                    <li>Home</li>
-                    <li>Produtos</li>
-                    <li>Contato</li>
-                    <li>Quem somos</li>
-                    <li>Localização</li>
+                <ul class="navigation-menu">
+                    <li class="navigation-item">Home</li>
+                    <li class="navigation-item">Produtos</li>
+                    <li class="navigation-item">Contato</li>
+                    <li class="navigation-item">Quem Somos</li>
+                    <li class="navigation-item">Localização</li>
                 </ul>
             </nav>
         </div>
     </header>
-
+    
     <section class="container img-and-info">
         <div>
             <h2 class="img-and-info__title"> Limpeza que Revitaliza, <strong>Bem-Estar</strong> que Transforma! </h2>
