style: Update font sizes and margins for improved responsiveness

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Section Services -->
     <section class="services">
         <div class="container services-title-and-info">
-            <div>
+            <div class="services__container">
                 <h2 class="services-title-and-info__title">Transformamos Espaços, Elevamos a Saúde e Bem-Estar!</h2>
                 <p class="services-title-and-info__paragrafo">Conheça nossos serviços de higienização e limpeza profunda, e garanta um ambiente mais saudável e seguro para você e sua família.</p>
 
