style: alteração das cores das variaveis

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
         </div>
 
-        <img src="images/higienizacao.svg" alt="Imagem de limpeza" class="img-and-info__img">
+        <img src="images/higienizacao-blue.png" alt="Imagem de limpeza" class="img-and-info__img">
     </section>
 
     <!-- Section Services -->
@@ -171,8 +171,8 @@
             <div class="testimonials">
                 <div class="testimonials__decoration testimonials__decoration--triangle-orange"></div>
                 <div class="testimonials__decoration testimonials__decoration--triangle-orange-shadow"></div>
-
-                <img src="images/profissionalismo.svg" alt="" class="testimonials__img">
+,
+                <img src="images/profissionalismo-blue.png" alt="" class="testimonials__img">
 
                 <div class="testimonials__content">
                     <div class="testimonials__header">
@@ -212,6 +212,8 @@
                 </div>
             </div>
         </div>
+
+        <div class="line-bottom"></div>
     </section>
 
     <!-- Section Services Cards -->
@@ -248,8 +250,9 @@
 
     <!-- Section FAQ -->
     <section class="container">
+        <div class="line-top"></div>
         <div class="faq">
-            <img src="images/duvida.svg" alt="Dúvida">
+            <img src="images/duvida-blue.png" alt="Dúvida">
             <h2 class="faq__title">Perguntas Frequentes</h2>
             <p class="faq__paragraph">Confira as dúvidas mais comuns sobre nossos serviços de limpeza e higienização.</p>
     
