style: adicionado novas imagens na section why choose

--- a/index.html
+++ b/index.html
@@ -25,22 +25,20 @@
 
             <nav>
                 <ul class="navigation-menu">
-                    <li class="navigation__item">Home</li>
-                    <li class="navigation__item">Produtos</li>
-                    <li class="navigation__item">Contato</li>
-                    <li class="navigation__item">Quem Somos</li>
-                    <li class="navigation__item">Localização</li>
+                    <li class="navigation__item">Serviços</li>
+                    <li class="navigation__item">Por que nos escolher</li>
+                    <li class="navigation__item">Nossos Valores</li>
+                    <li class="navigation__item">Perguntas Frequentes</li>
                 </ul>
             </nav>
         </div>
 
         <div class="header__mobile-menu">
             <ul class="header__mobile-menu__list">
-                <li class="header__mobile-menu__item">Home</li>
-                <li class="header__mobile-menu__item">Produtos</li>
-                <li class="header__mobile-menu__item">Contato</li>
-                <li class="header__mobile-menu__item">Quem Somos</li>
-                <li class="header__mobile-menu__item">Localização</li>
+                <li class="header__mobile-menu__item">Serviços</li>
+                <li class="header__mobile-menu__item">Por que nos escolher</li>
+                <li class="header__mobile-menu__item">Nossos Valores</li>
+                <li class="header__mobile-menu__item">Perguntas Frequentes</li>
             </ul>
         </div>
     </header>
@@ -125,10 +123,9 @@
             <p class="why-choose-us__description">Conheça os diferenciais que fazem da Higienização a melhor escolha para a limpeza e higienização do seu ambiente.</p>
 
             <div class="why-choose-us__features">
+
                 <div class="why-choose-us__feature">
-                    <div class="why-choose-us__icon">
-                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
-                    </div>
+                    <img src="images/estofado-01.jpg" alt="Icone de profissionalismo" class="why-choose-us__img">
 
                     <div class="why-choose-us__text">
                         <h3>Profissionalismo e Dedicação</h3>
@@ -137,9 +134,7 @@
                 </div>
 
                 <div class="why-choose-us__feature">
-                    <div class="why-choose-us__icon"> 
-                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
-                    </div>
+                    <img src="images/estofado-02.jpg" alt="Icone de profissionalismo" class="why-choose-us__img">
 
                     <div class="why-choose-us__text">
                         <h3>Atendimento Personalizado</h3>
@@ -148,9 +143,8 @@
                 </div>
 
                 <div class="why-choose-us__feature">
-                    <div class="why-choose-us__icon"> 
-                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
-                    </div>
+                    <img src="images/estofado-03.jpg" alt="Icone de profissionalismo" class="why-choose-us__img">
+             
                     <div class="why-choose-us__text">
                         <h3>Compromisso com a sua Saúde e Bem-Estar</h3>
                         <p>Nossos serviços não apenas limpam, mas protegem sua saúde e a de quem você ama.</p>
@@ -158,9 +152,8 @@
                 </div>
 
                 <div class="why-choose-us__feature">
-                    <div class="why-choose-us__icon"> 
-                        <img src="images/profissionalismo.svg" alt="Icone de profissionalismo">
-                    </div>
+                    <img src="images/estofado-04.jpg" alt="Icone de profissionalismo" class="why-choose-us__img">
+                
                     <div class="why-choose-us__text">
                         <h3>Tecnologia de Ponta</h3>
                         <p>Utilizamos equipamentos e produtos de última geração para resultados impecáveis.</p>
@@ -219,31 +212,29 @@
     <!-- Section Services Cards -->
     <section class="services-cards">
         <div class="circle-decoration"></div>
+        <img src="images/desifeccao.svg" alt="" class="services-cards__img">
+
         <div class="cards-container">
             <div class="service-card">
-                <h2>Title vem aqui</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, praesentium officiis voluptas labore perspiciatis corrupti consequatur sapiente quod iure aspernatur ad voluptate error eaque repudiandae voluptatem earum eos similique voluptates.</p>
-                <img src="images/desifeccao.svg" alt="">
+                <h2>Excelência no Atendimento</h2>
+                <p>Nosso compromisso é oferecer sempre um atendimento de qualidade, com foco nas suas necessidades. Garantimos atenção aos detalhes e uma experiência de atendimento eficiente e personalizada.</p>
             </div>
 
             <div class="column-cards">
                 <div class="service-card">
-                    <h2>Title vem aqui</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, praesentium officiis voluptas labore perspiciatis corrupti consequatur sapiente quod iure aspernatur ad voluptate error eaque repudiandae voluptatem earum eos similique voluptates.</p>
-                    <img src="images/desifeccao.svg" alt="">
+                    <h2>Inovação Contínua</h2>
+                    <p>Estamos sempre em busca de novas soluções para melhorar os nossos serviços. A inovação faz parte do nosso DNA, e trabalhamos constantemente para oferecer o que há de mais moderno no mercado.</p>
                 </div>
 
                 <div class="service-card">
-                    <h2>Title vem aqui</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, praesentium officiis voluptas labore perspiciatis corrupti consequatur sapiente quod iure aspernatur ad voluptate error eaque repudiandae voluptatem earum eos similique voluptates.</p>
-                    <img src="images/desifeccao.svg" alt="">
+                    <h2>Compromisso com o Futuro</h2>
+                    <p>Priorizamos o meio ambiente em tudo o que fazemos. Utilizamos técnicas e produtos ecologicamente responsáveis para garantir uma limpeza eficiente sem comprometer o planeta.</p>
                 </div>
             </div>
 
             <div class="service-card">
-                <h2>Title vem aqui</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, praesentium officiis voluptas labore perspiciatis corrupti consequatur sapiente quod iure aspernatur ad voluptate error eaque repudiandae voluptatem earum eos similique voluptates.</p>
-                <img src="images/desifeccao.svg" alt="">    
+                <h2>Compromisso com a Qualidade</h2>
+                <p>Qualidade está presente em cada detalhe do nosso trabalho. Desde o início até a entrega final, asseguramos que cada etapa siga os mais altos padrões de excelência.</p>
             </div>
         </div>
     </section>
@@ -298,11 +289,10 @@
             <div class="footer__section">
                 <h2 class="footer__title">Links Úteis</h2>
                 <ul class="footer__list">
-                    <li class="footer__list-item">Home</li>
-                    <li class="footer__list-item">Produtos</li>
-                    <li class="footer__list-item">Contato</li>
-                    <li class="footer__list-item">Quem somos</li>
-                    <li class="footer__list-item">Localização</li>
+                    <li class="footer__list-item">Serviços</li>
+                    <li class="footer__list-item">Por que nos escolher</li>
+                    <li class="footer__list-item">Nossos Valores</li>
+                    <li class="footer__list-item">Perguntas Frequentes</li>
                 </ul>
             </div>
 
