style: Atualizado links de navegação para usar âncoras

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
 
             <nav>
                 <ul class="navigation-menu">
-                    <li class="navigation__item">Serviços</li>
-                    <li class="navigation__item">Por que nos escolher</li>
-                    <li class="navigation__item">Nossos Valores</li>
-                    <li class="navigation__item">Perguntas Frequentes</li>
+                    <li><a href="#services" class="navigation__item">Serviços</a></li>
+                    <li><a href="#why-choose-us" class="navigation__item">Por que nos escolher</a>
+                    <li><a href="#services-cards" class="navigation__item">Nossos Valores</a></li>
+                    <li><a href="#faq" class="navigation__item">Perguntas Frequentes</a></li>
                 </ul>
             </nav>
         </div>
 
         <div class="header__mobile-menu">
             <ul class="header__mobile-menu__list">
-                <li class="header__mobile-menu__item">Serviços</li>
-                <li class="header__mobile-menu__item">Por que nos escolher</li>
-                <li class="header__mobile-menu__item">Nossos Valores</li>
-                <li class="header__mobile-menu__item">Perguntas Frequentes</li>
+                <li class="header__mobile-menu__item"><a href="#services">Serviços</a></li>
+                <li class="header__mobile-menu__item"><a href="#why-choose-us">Por que nos escolher</a></li>
+                <li class="header__mobile-menu__item"><a href="#services-cards">Nossos Valores</a></li>
+                <li class="header__mobile-menu__item"><a href="#faq">Perguntas Frequentes</a></li>
             </ul>
         </div>
     </header>
@@ -59,7 +59,7 @@
     </section>
 
     <!-- Section Services -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="container services-title-and-info">
             <div class="services__container">
                 <h2 class="services-title-and-info__title">Transformamos Espaços, Elevamos a Saúde e Bem-Estar!</h2>
@@ -113,7 +113,7 @@
     </section>
 
     <!-- Section Why Choose -->
-    <section class="container">
+    <section class="container" id="why-choose-us">
         <div class="why-choose-us">
             <div class="why-choose-us__decoration--triangle"></div>
             <div class="why-choose-us__decoration--triangle why-choose-us__decoration--triangle-gray"></div>
@@ -210,7 +210,7 @@
     </section>
 
     <!-- Section Services Cards -->
-    <section class="services-cards">
+    <section class="services-cards" id="services-cards">
         <div class="circle-decoration"></div>
         <img src="images/desifeccao.svg" alt="" class="services-cards__img">
 
@@ -240,7 +240,7 @@
     </section>
 
     <!-- Section FAQ -->
-    <section class="container">
+    <section class="container" id="faq">
         <div class="line-top"></div>
         <div class="faq">
             <img src="images/duvida-blue.png" alt="Dúvida">
@@ -289,10 +289,10 @@
             <div class="footer__section">
                 <h2 class="footer__title">Links Úteis</h2>
                 <ul class="footer__list">
-                    <li class="footer__list-item">Serviços</li>
-                    <li class="footer__list-item">Por que nos escolher</li>
-                    <li class="footer__list-item">Nossos Valores</li>
-                    <li class="footer__list-item">Perguntas Frequentes</li>
+                    <li class="footer__list-item"><a href="#services">Serviços</a></li>
+                    <li class="footer__list-item"><a href="#why-choose-us">Por que nos escolher</a></li>
+                    <li class="footer__list-item"><a href="#services-cards">Nossos Valores</a></li>
+                    <li class="footer__list-item"><a href="#faq">Perguntas Frequentes</a></li>
                 </ul>
             </div>
 
